--- a/src/app/UI Folder/nav-bar/nav-bar.component.html
+++ b/src/app/UI Folder/nav-bar/nav-bar.component.html
@@ -22,7 +22,7 @@
             </a>
           </li>
           <li>
-            <a href="/courses" class="border-transparent text-gray-600 hover:border-green-300 hover:text-green-700 px-3 py-2 border-b-2 text-sm font-medium transition-colors duration-200">
+            <a href="/courses-enroll" class="border-transparent text-gray-600 hover:border-green-300 hover:text-green-700 px-3 py-2 border-b-2 text-sm font-medium transition-colors duration-200">
               Courses
             </a>
           </li>
